--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.17",
+    "@stripe/stripe-js": "^1.52.1",
     "autoprefixer": "10.4.14",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
@@ -18,6 +19,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "stripe": "^12.1.1",
-    "tailwindcss": "3.3.3"
+    "tailwindcss": "3.3.3",
+    "use-shopping-cart": "^3.1.6"
   }
 }
