--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@heroicons/react": "^2.0.17",
     "@stripe/stripe-js": "^1.52.1",
     "autoprefixer": "10.4.14",
+    "axios": "^1.3.5",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
     "next": "13.4.12",
