--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-hot-toast": "^2.4.0",
     "react-spinners": "^0.13.8",
     "stripe": "^12.1.1",
+    "swr": "^2.1.3",
     "tailwindcss": "3.3.3",
     "use-shopping-cart": "^3.1.6"
   }
