--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
     "@heroicons/react": "^2.0.17",
     "@stripe/stripe-js": "^1.52.1",
     "autoprefixer": "10.4.14",
